# vibe-island

./: .gitignore  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vibe-island-1.0.0.tgz
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.omc/state/: hud-state.json  hud-stdin-cache.json  last-tool-error.json
.omc/state/sessions/c144044c-eabc-4a39-889f-ae332e989f8a/: hud-state.json
assets/: website-alt.css  website-main.css
docs/superpowers/plans/: 2026-04-23-dmg-parity.md
docs/superpowers/specs/: 2026-04-23-vibeisland-dmg-parity-design.md
scripts/: build-all.sh  vibe-island-popup.py  vibe-island-waybar.css  vibe-island-waybar.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/terminal-focus/: extension.js  package.json
src-tauri/src/: lib.rs  main.rs  updater.rs
src-tauri/src/config/: mod.rs
src-tauri/src/hooks/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/sessions/: mod.rs
src-tauri/src/socket/: mod.rs
src-tauri/src/sound/: mod.rs
src-tauri/src/ssh_remote/: mod.rs
src/components/approval/: ApprovalCard.tsx
src/components/notch/: NotchPanel.tsx  PixelPet.tsx  SessionRow.tsx
src/components/onboarding/: OnboardingScreen.tsx
src/components/settings/: SettingsPanel.tsx
src/store/: useStore.ts
src/styles/: index.css
src/types/: index.ts
